--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,8 @@
 .titulousuario{
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+    padding-right: 0;
+    max-width: max-content;
     background-color: #f5f6f7;
     text-align: center;
 }
@@ -76,10 +78,14 @@
 
 .btn-round .fas {
     font-size: 20px;
-    color: #000; /* Cambia el color del icono si es necesario */
+    color: #000; 
 }
 
 .btn-container
 {
     text-align: right;
+}
+
+.left-column {
+    padding-left: 15px;
 }
