--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,9 +47,12 @@
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
     padding-right: 0;
-    max-width: max-content;
     background-color: #f5f6f7;
     text-align: center;
+}
+
+.fondo{
+    background-color: #f5f6f7;
 }
 
 .foto{
