--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,3 +111,13 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+#backupBtn {
+  background-color: white;
+  color: black;
+}
+
+#backupBtn:hover {
+  transform: scale(1.1);
+  transition: transform .2s;
+}
