--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,11 @@
     height: auto;
 }
 
+.image-container {
+  width: 200px;
+  height: 200px;
+}
+
 /*Botones incidencia*/
 .btn-round {
     background-color: transparent;
